--- a/css/index.css
+++ b/css/index.css
@@ -128,14 +128,14 @@ footer {
   }
 }
 
-h3 {
+h2 {
   display: inline-block;
   position: relative;
   margin-bottom: 100px;
   text-align: left;
   color: #77addf;
 }
-h3::after {
+h2::after {
   content: "";
   position: absolute;
   left: 0;
@@ -185,6 +185,42 @@ body {
     offset-distance: 100%;
   }
 }
+@-webkit-keyframes moveLogo {
+  0% {
+    transform: translate(-100%, 0);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+@keyframes moveLogo {
+  0% {
+    transform: translate(-100%, 0);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+@-webkit-keyframes blurMe {
+  0% {
+    filter: blur(4px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes blurMe {
+  0% {
+    filter: blur(4px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
 /* ==================== header ==================== */
 header {
   position: relative;
@@ -199,6 +235,8 @@ header #home .logo img {
   width: 60px;
   height: 60px;
   cursor: pointer;
+  -webkit-animation: moveLogo 0.4s ease-out backwards;
+          animation: moveLogo 0.4s ease-out backwards;
 }
 header #home .header-bg {
   position: relative;
@@ -401,6 +439,66 @@ header #home .intro-flip-wrap {
 }
 header #home .intro-flip-wrap h2 {
   font-weight: 500;
+}
+header #home .intro-flip-wrap span {
+  font-size: 2.2rem;
+  letter-spacing: 0.6rem;
+  filter: blur(2px);
+  -webkit-animation: blurMe 1.4s ease-in-out forwards;
+          animation: blurMe 1.4s ease-in-out forwards;
+  opacity: 0;
+}
+header #home .intro-flip-wrap span:nth-child(2n+1) {
+  -webkit-animation-delay: calc(100ms * 1);
+          animation-delay: calc(100ms * 1);
+}
+header #home .intro-flip-wrap span:nth-child(2n+2) {
+  -webkit-animation-delay: calc(100ms * 2);
+          animation-delay: calc(100ms * 2);
+}
+header #home .intro-flip-wrap span:nth-child(2n+3) {
+  -webkit-animation-delay: calc(100ms * 3);
+          animation-delay: calc(100ms * 3);
+}
+header #home .intro-flip-wrap span:nth-child(2n+4) {
+  -webkit-animation-delay: calc(100ms * 4);
+          animation-delay: calc(100ms * 4);
+}
+header #home .intro-flip-wrap span:nth-child(2n+5) {
+  -webkit-animation-delay: calc(100ms * 5);
+          animation-delay: calc(100ms * 5);
+}
+header #home .intro-flip-wrap span:nth-child(2n+6) {
+  -webkit-animation-delay: calc(100ms * 6);
+          animation-delay: calc(100ms * 6);
+}
+header #home .intro-flip-wrap span:nth-child(2n+7) {
+  -webkit-animation-delay: calc(100ms * 7);
+          animation-delay: calc(100ms * 7);
+}
+header #home .intro-flip-wrap span:nth-child(2n+8) {
+  -webkit-animation-delay: calc(100ms * 8);
+          animation-delay: calc(100ms * 8);
+}
+header #home .intro-flip-wrap span:nth-child(2n+9) {
+  -webkit-animation-delay: calc(100ms * 9);
+          animation-delay: calc(100ms * 9);
+}
+header #home .intro-flip-wrap span:nth-child(2n+10) {
+  -webkit-animation-delay: calc(100ms * 10);
+          animation-delay: calc(100ms * 10);
+}
+header #home .intro-flip-wrap span:nth-child(2n+11) {
+  -webkit-animation-delay: calc(100ms * 11);
+          animation-delay: calc(100ms * 11);
+}
+header #home .intro-flip-wrap span:nth-child(2n+12) {
+  -webkit-animation-delay: calc(100ms * 12);
+          animation-delay: calc(100ms * 12);
+}
+header #home .intro-flip-wrap span:nth-child(2n+13) {
+  -webkit-animation-delay: calc(100ms * 13);
+          animation-delay: calc(100ms * 13);
 }
 header #home .intro-flip-wrap #textFlip {
   position: relative;
@@ -679,32 +777,32 @@ main #skill .skill-circle .cir-html {
   top: -920px;
   left: 0px;
   background-color: #f16529;
-  -webkit-animation: trackPath 12s linear infinite;
-          animation: trackPath 12s linear infinite;
+  -webkit-animation: trackPath 10.4s linear infinite;
+          animation: trackPath 10.4s linear infinite;
   offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
 }
 main #skill .skill-circle .cir-css {
   top: -920px;
   left: -30px;
   background-color: #0065f4;
-  -webkit-animation: trackPath 16s linear infinite;
-          animation: trackPath 16s linear infinite;
+  -webkit-animation: trackPath 14s linear infinite;
+          animation: trackPath 14s linear infinite;
   offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-sass {
   top: -920px;
   left: -40px;
   background-color: #cc6699;
-  -webkit-animation: trackPath 18s 500ms linear infinite;
-          animation: trackPath 18s 500ms linear infinite;
+  -webkit-animation: trackPath 16s 500ms linear infinite;
+          animation: trackPath 16s 500ms linear infinite;
   offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
 }
 main #skill .skill-circle .cir-jquery {
   top: -940px;
   left: 0;
   background-color: #0868ac;
-  -webkit-animation: trackPath 18s 500ms linear infinite;
-          animation: trackPath 18s 500ms linear infinite;
+  -webkit-animation: trackPath 16s 500ms linear infinite;
+          animation: trackPath 16s 500ms linear infinite;
   offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-javascript {
@@ -712,16 +810,16 @@ main #skill .skill-circle .cir-javascript {
   left: -30px;
   color: #666;
   background-color: #ffdf00;
-  -webkit-animation: trackPath 12s 1000ms linear infinite;
-          animation: trackPath 12s 1000ms linear infinite;
+  -webkit-animation: trackPath 10s 1000ms linear infinite;
+          animation: trackPath 10s 1000ms linear infinite;
   offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-react {
   top: -880px;
   left: 0;
   background-color: #6ecff1;
-  -webkit-animation: trackPath 14s 1000ms linear infinite;
-          animation: trackPath 14s 1000ms linear infinite;
+  -webkit-animation: trackPath 11.2s 1000ms linear infinite;
+          animation: trackPath 11.2s 1000ms linear infinite;
   offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
 }
 main #skill .skill-circle .cir-git {
@@ -760,8 +858,8 @@ main #skill .skill-circle .cir-illust {
   top: -900px;
   left: -40px;
   background-color: #ff9a00;
-  -webkit-animation: trackPath 22s 2500ms linear infinite;
-          animation: trackPath 22s 2500ms linear infinite;
+  -webkit-animation: trackPath 18s 2500ms linear infinite;
+          animation: trackPath 18s 2500ms linear infinite;
   offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
 }
 main #portfolio {
@@ -786,6 +884,11 @@ main #portfolio .pofol-box .flexbox .pofol-thumbnail {
   position: relative;
   width: 100%;
 }
+@media screen and (min-width: 768px) {
+  main #portfolio .pofol-box .flexbox .pofol-thumbnail {
+    width: 80%;
+  }
+}
 main #portfolio .pofol-box .flexbox .pofol-thumbnail img {
   display: block;
   width: 100%;
@@ -805,7 +908,7 @@ main #portfolio .pofol-box .flexbox .pofol-info {
 @media screen and (min-width: 768px) {
   main #portfolio .pofol-box .flexbox .pofol-info {
     text-align: unset;
-    width: min(80%, 400px);
+    width: min(80%, 600px);
   }
 }
 main #portfolio .pofol-box .flexbox .pofol-info > div {
@@ -953,12 +1056,21 @@ footer .footer-bg .contact .topbtn:hover {
   transition: all 0.4s;
 }
 footer .copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100px;
   text-align: center;
   line-height: 100px;
-  vertical-align: center;
+  background: #77addf;
+}
+footer .copyright p {
+  margin: 0 14px;
   font-size: 14px;
   color: #eee;
-  background: #77addf;
+}
+footer .copyright img {
+  width: 38px;
+  height: 38px;
 }/*# sourceMappingURL=index.css.map */
