--- a/css/index.css
+++ b/css/index.css
@@ -314,6 +314,16 @@ header #home .pc-nav #gnb li a {
   position: relative;
   color: #000;
 }
+header #home .pc-nav #gnb li a.active_pc::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 16px;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background: rgba(0, 0, 0, 0.5);
+}
 header #home .pc-nav #gnb li a::after {
   content: "";
   position: absolute;
@@ -335,16 +345,6 @@ header #home .pc-nav #gnb li a:hover::after {
   border-radius: 4px;
   opacity: 1;
   transition: all 0.4s ease;
-  background: rgba(0, 0, 0, 0.5);
-}
-header #home .pc-nav #gnb li a.active_pc::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 16px;
-  width: 100%;
-  height: 4px;
-  border-radius: 4px;
   background: rgba(0, 0, 0, 0.5);
 }
 header #home .pc-nav #gnb li a:hover {
@@ -956,8 +956,8 @@ main #portfolio .pofol-box .flexbox .pofol-info .modal-btn button {
   color: #fcfcfc;
   background-color: #77addf;
 }
-main #portfolio .pofol-box .flexbox .pofol-info .modal-btn button:last-child {
-  margin-left: 24px;
+main #portfolio .pofol-box .flexbox .pofol-info .modal-btn button:first-child {
+  margin-right: 24px;
 }
 main #portfolio .pofol-box .flexbox .pofol-info .modal-btn button:hover {
   color: #77addf;
