--- a/scss/index.scss
+++ b/scss/index.scss
@@ -211,10 +211,22 @@ header {
           text-align: center;
           line-height: 60px;
 
+          
+
           a {
             display: inline-block;
             position: relative;
             color: #000;
+
+            &.active_pc::after {
+              content: '';
+              position: absolute;
+              left: 0; bottom: 16px;
+              width: 100%;
+              height: 4px;
+              border-radius: 4px;
+              background: rgba(0, 0, 0, .5);
+          }
 
             &::after {
               content: '';
@@ -239,17 +251,7 @@ header {
               background: rgba(0, 0, 0, .5);
             }
 
-            &.active_pc {
-              &::after {
-                content: '';
-                position: absolute;
-                left: 0; bottom: 16px;
-                width: 100%;
-                height: 4px;
-                border-radius: 4px;
-                background: rgba(0, 0, 0, .5);
-              }
-            }
+
           }
 
           a:hover {
@@ -855,8 +857,8 @@ main {
               color: $body-bg;
               background-color: $color-main;
 
-              &:last-child {
-                margin-left: 24px;
+              &:first-child {
+                margin-right: 24px;
               }
 
               &:hover {
