--- a/scss/index.scss
+++ b/scss/index.scss
@@ -808,6 +808,8 @@ main {
             display: block;
             width: 100%;
             margin-bottom: 28px;
+            overflow: hidden;
+            border-radius: 6px;
             box-shadow: rgba(0, 0, 0, 0.29) 0px 10px 20px;
 
             @include responsive(tablet-screens) {
