--- a/css/index.css
+++ b/css/index.css
@@ -79,7 +79,7 @@ footer {
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
-    padding: 0;
+    padding: 0 10px;
   }
 }
 
@@ -175,22 +175,6 @@ body {
   }
   100% {
     offset-distance: 100%;
-  }
-}
-@-webkit-keyframes moveLogo {
-  0% {
-    transform: translate(-100%, 0);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
-}
-@keyframes moveLogo {
-  0% {
-    transform: translate(-100%, 0);
-  }
-  100% {
-    transform: translate(0, 0);
   }
 }
 @-webkit-keyframes blurMe {
@@ -503,7 +487,7 @@ header #home .intro-flip-wrap #textFlip {
   margin: 48px auto;
   font-weight: 600;
   font-size: 1.4rem;
-  opacity: 1;
+  opacity: 0;
   -webkit-animation: blurMe 1s 2s forwards;
           animation: blurMe 1s 2s forwards;
 }
@@ -633,15 +617,6 @@ main #skill .skill-bg {
     width: 100%;
     height: auto;
   }
-}
-main #skill .skill-bg .flower {
-  position: absolute;
-  top: 40px;
-  left: 200px;
-  width: 20px;
-  height: 20px;
-  background-color: pink;
-  border-radius: 50%;
 }
 main #skill .skill-bg .grass {
   position: relative;
