--- a/scss/index.scss
+++ b/scss/index.scss
@@ -49,6 +49,7 @@
 
 h2 { // 섹션 타이틀 (공통소스)
   display: inline-block;
+  text-align: left;
   position: relative;
   margin-bottom: 160px;
   text-align: left;
@@ -181,7 +182,7 @@ header {
       position: fixed;
       top: 20px; left: 50%;
       width: 80%;
-      height: 60px;
+      height: 58px;
       border-radius: 20px;
       transform: translateX(-50%);
       z-index: 99;
@@ -194,25 +195,22 @@ header {
           width: 160px;
           margin-right: 1.2em;
           text-align: center;
-          line-height: 60px;
+          line-height: 58px;
 
           a {
             display: inline-block;
             position: relative;
-            color: #000;
+            color: #333;
 
             &::after {
               content: '';
               position: absolute;
-              left: 0; bottom: 20px;
-              width: 100%;
-              height: 4px;
-              border-radius: 4px;
+              left: 0; bottom: 14px;
+              width: 0;
+              height: 2px;
               opacity: 0;
-              background: rgba(0, 0, 0, .5);
-
+              background: rgba(255, 255, 255);
               transition: all .4s ease;
-
             }
 
             &:hover {
@@ -220,26 +218,20 @@ header {
             }
 
             &:hover::after {
-              left: 0; bottom: 16px;
-
-              // content: '';
-              // position: absolute;
-              // width: 100%;
-              // height: 4px;
-              // border-radius: 4px;
+              width: 100%;
+              left: 0; bottom: 14px;
               opacity: 1;
-              // background: rgba(0, 0, 0, .5);
             }
 
             &.active_pc::after {
               display: block;
               content: '';
               position: absolute;
-              left: 0; bottom: 16px;
+              left: 0; bottom: 14px;
               width: 100%;
-              height: 4px;
-              border-radius: 4px;
-              background: rgba(0, 0, 0, .5);
+              height: 2px;
+              background: rgba(255, 255, 255);
+              opacity: 1;
             }
 
             &.active_pc {
@@ -250,9 +242,11 @@ header {
       } // gnb
 
       .menu_top {
-        border: 1px solid  rgba(0, 0, 0, .2);
         border-radius: 20px;
         backdrop-filter: blur(3px);
+        // background-color: rgba(119, 173, 223, .8);
+        background: rgba(255, 255, 255, .84);
+
         transition: .5s;
       }
     } // nav
