--- a/scss/index.scss
+++ b/scss/index.scss
@@ -200,7 +200,7 @@ header {
           a {
             display: inline-block;
             position: relative;
-            color: #333;
+            color: #000;
 
             &::after {
               content: '';
@@ -209,7 +209,7 @@ header {
               width: 0;
               height: 2px;
               opacity: 0;
-              background: rgba(255, 255, 255);
+              background: #333;
               transition: all .4s ease;
             }
 
@@ -230,7 +230,7 @@ header {
               left: 0; bottom: 14px;
               width: 100%;
               height: 2px;
-              background: rgba(255, 255, 255);
+              background: #333;
               opacity: 1;
             }
 
@@ -243,10 +243,11 @@ header {
 
       .menu_top {
         border-radius: 20px;
+        border: 1px solid #ccc;
         backdrop-filter: blur(3px);
-        // background-color: rgba(119, 173, 223, .8);
+        // background-color: rgba(119, 173, 223, .6);
         background: rgba(255, 255, 255, .84);
-
+        // background: rgba(221, 239, 196, .9);
         transition: .5s;
       }
     } // nav
